# chacc-api

./: .env.sample  .env_sample  .gitignore  LICENSE  MANIFEST.in  README.md  another.chacc  authentication.chacc  main.py  mwakyusa.chacc  opentz.db  pyproject.toml  requirements-dev.txt  requirements.txt  start_server.py  uvicorn_config.py
.github/workflows/: ci.yml  release.yml
adcore_cli/: __main__.py  commands.py
chacc_api/: __init__.py
chacc_api/core/: __init__.py
chacc_api/database/: __init__.py
chacc_api/loaders/: __init__.py
chacc_api/migration/: __init__.py
chacc_api/server/: __init__.py  main.py  start_server.py  uvicorn_config.py
chacc_api/services/: __init__.py
chacc_api/utils/: __init__.py
chacc_cli/: __init__.py  __main__.py  commands.py
chacc_cli/templates/: README.md.template  context_factory.py.template  dev_context.py.template  main.py.template  models.py.template  module_meta.json.template  routes.py.template  run_tests.py.template  test_module.py.template
config/: settings.py  urls.py
deployment/docker/: .dockerignore  .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml
deployment/standalone/: deploy.sh
open_tz_cli/: __main__.py
src/: __init__.py  chacc_dependency_manager.py  constants.py  core_services.py  database.py  dependency_manager.py  dependency_manager_readme.md  env_validator.py  health.py  logger.py  logging.py  main.py  module_loader.py  modules.py  plugin_loader.py  rate_limiter.py  rate_limiting.py  redis_service.py
src/chacc_api/: __init__.py
src/chacc_api/api/: __init__.py
src/chacc_api/core/: __init__.py  core_services.py
src/chacc_api/database/: __init__.py  database.py
src/chacc_api/services/: __init__.py
src/migration/: __init__.py  backup.py  runner.py  tracker.py
src/services/: __init__.py
tests/: run_tests_safely.py  test_backbone.py  test_module_loading.py  test_module_management.py  test_relative_imports.py
