[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chacc-api"
version = "1.0.0b2"
description = "ChaCC API - A modular FastAPI application for extensible APIs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Jonas G Mwambimbi", email = "jonasgeorge1015@gmail.com"}
]
keywords = ["api", "fastapi", "modular", "plugin", "chacc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "slowapi",
    "python-decouple",
    "pyjwt",
    "argon2-cffi",
    "python-multipart",
    "email-validator",
    "colorlog",
    "chacc-dependency-manager",
    "redis",
    "requests",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
chacc = "chacc_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/chacc-io/chacc-api"
Documentation = "https://chacc-api.readthedocs.io"
Repository = "https://github.com/jonas1015/chacc-api"
Issues = "https://github.com/jonas1015/chacc-api/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["chacc_cli", "chacc_api", "chacc_api.*", "src", "src.migration", "src.services"]
exclude = ["tests*", "deployment*"]

[tool.setuptools.package-data]
chacc_cli = ["templates/*.template"]
chacc_api = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
